knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Deal_Workstream__c/Deal_Workstream__c.object-meta.xml
<CustomObject>
    <description>This object houses BD requests critical for the deal, but require work from other departments such as: Legal, Finance, Proposals, Implementation, etc.</description>
    <label>Deal Workstream</label>
    <nameField>
        <displayFormat>DWS-{00000}</displayFormat>
        <label>Deal Workstream Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal Workstreams</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>