knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Deal_Workstream__c/fields/BD_Review_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>BD_Review_Due_Date__c</fullName>
    <inlineHelpText>Identify the date the material should be returned to you for review, prior to presenting to client.</inlineHelpText>
    <label>BD Review Due Date</label>
    <type>Date</type>
</CustomField>