knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Deal_Workstream__c/fields/Customizations_Detail__c.field-meta.xml
<CustomField>
    <fullName>Customizations_Detail__c</fullName>
    <inlineHelpText>Provide additional details regarding customization needs.</inlineHelpText>
    <label>Customizations Detail</label>
    <length>1500</length>
    <type>Html</type>
</CustomField>