knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Deal_Workstream__c/fields/Expected_Presentation_Date_to_Prospect__c.field-meta.xml
<CustomField>
    <fullName>Expected_Presentation_Date_to_Prospect__c</fullName>
    <inlineHelpText>When is the expected date which this material will be presented to the client?</inlineHelpText>
    <label>Expected Presentation Date to Prospect</label>
    <type>Date</type>
</CustomField>