knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Deal_Workstream__c/fields/Financial_Terms_Construct_to_be_Used__c.field-meta.xml
<CustomField>
    <fullName>Financial_Terms_Construct_to_be_Used__c</fullName>
    <label>Financial Terms Construct to be Used</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flat Subsidy</fullName>
            </value>
            <value>
                <fullName>Management Fee</fullName>
            </value>
            <value>
                <fullName>Optimization Partnership/Flat Subsidy</fullName>
            </value>
            <value>
                <fullName>Performance Partnership</fullName>
            </value>
            <value>
                <fullName>Other - Provide Description</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>