knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Deal_Workstream__c/fields/Goal_of_Presentation_Proposal__c.field-meta.xml
<CustomField>
    <fullName>Goal_of_Presentation_Proposal__c</fullName>
    <inlineHelpText>Share what the goal is, such as: To drive interest, be selected to participate in RFP, discuss financial constructs, governance, etc.</inlineHelpText>
    <label>Goal of Presentation/Proposal</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>