knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Deal_Workstream__c/fields/Governance_Structure__c.field-meta.xml
<CustomField>
    <fullName>Governance_Structure__c</fullName>
    <inlineHelpText>If applicable, provide details regarding the proposed governance structure</inlineHelpText>
    <label>Governance Structure</label>
    <length>2500</length>
    <type>Html</type>
</CustomField>