knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Deal_Workstream__c/fields/Hospital_System_Name__c.field-meta.xml
<CustomField>
    <fullName>Hospital_System_Name__c</fullName>
    <formula>Opportunity__r.Account.Name</formula>
    <label>Hospital / System Name - Oppty</label>
    <type>Text</type>
</CustomField>