knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Deal_Workstream__c/fields/Link_to_Final_Document__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Final_Document__c</fullName>
    <label>Link to Final Document</label>
    <type>Url</type>
</CustomField>