knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Deal_Workstream__c/fields/Org_Name_As_it_Should_Appear_in_Deck__c.field-meta.xml
<CustomField>
    <fullName>Org_Name_As_it_Should_Appear_in_Deck__c</fullName>
    <inlineHelpText>Provide the name of the organization/system/facility as you would like it to appear in the material/deck being created.</inlineHelpText>
    <label>Org Name - As it Should Appear in Deck</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>