knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Deal_Workstream__c/fields/Output_Required__c.field-meta.xml
<CustomField>
    <fullName>Output_Required__c</fullName>
    <label>Output Required</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Presentation / Slide Deck</fullName>
            </value>
            <value>
                <fullName>Booklet Created</fullName>
            </value>
            <value>
                <fullName>Printed Materials</fullName>
            </value>
            <value>
                <fullName>Other - provide additional details</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>