knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Deal_Workstream__c/fields/Service_Line__c.field-meta.xml
<CustomField>
    <fullName>Service_Line__c</fullName>
    <inlineHelpText>Select the service line(s) the presentation/deck will discuss</inlineHelpText>
    <label>Service Line</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hospital Medicine - HM</fullName>
            </value>
            <value>
                <fullName>Emergency Medicine - EM</fullName>
            </value>
            <value>
                <fullName>Free Standing ED - FSED</fullName>
            </value>
            <value>
                <fullName>Intensive Care Unit - ICU</fullName>
            </value>
            <value>
                <fullName>Urgent Care - ICU</fullName>
            </value>
            <value>
                <fullName>Integrated Care Physician - ICP</fullName>
            </value>
            <value>
                <fullName>Connected Care - Complete</fullName>
            </value>
            <value>
                <fullName>Connected Care - During</fullName>
            </value>
            <value>
                <fullName>Connected Care - Next</fullName>
            </value>
            <value>
                <fullName>Connected Care - Proactive</fullName>
            </value>
            <value>
                <fullName>Innovation</fullName>
            </value>
            <value>
                <fullName>Other Service Lines - Non-core</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>