knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Deal_Workstream__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted to Proposals</fullName>
                <default>true</default>
                <label>Submitted to Proposals</label>
            </value>
            <value>
                <fullName>In Process - Proposals</fullName>
            </value>
            <value>
                <fullName>BD Action</fullName>
            </value>
            <value>
                <fullName>SVP Growth Action</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Incomplete - Abandoned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>