knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Deal_Workstream__c/fields/Subsequent_date_time__c.field-meta.xml
<CustomField>
    <fullName>Subsequent_date_time__c</fullName>
    <label>Subsequent date/time</label>
    <type>DateTime</type>
</CustomField>