knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Deal_Workstream__c/fields/Type_of_Presentation__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Presentation__c</fullName>
    <label>Type of Presentation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Formal Proposal</fullName>
            </value>
            <value>
                <fullName>Response to RFP/RFI</fullName>
            </value>
            <value>
                <fullName>SCP Introduction</fullName>
            </value>
            <value>
                <fullName>CEO Introduction</fullName>
            </value>
            <value>
                <fullName>Proposal Finalist</fullName>
            </value>
            <value>
                <fullName>Finalist Presentation Follow-up</fullName>
            </value>
            <value>
                <fullName>QBR</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>