knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Deal_Workstream__c/recordTypes/Ad_hoc_Presentation_Request.recordType-meta.xml
<RecordType>
    <fullName>Ad_hoc_Presentation_Request</fullName>
    <active>true</active>
    <description>PROPOSAL TEAM REQUEST - Request support to create / review an ad-hoc presentation</description>
    <label>Ad-hoc Presentation Request</label>
</RecordType>