knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Deal_Workstream__c/recordTypes/Governance_Presentation.recordType-meta.xml
<RecordType>
    <fullName>Governance_Presentation</fullName>
    <active>true</active>
    <description>PROPOSAL TEAM REQUEST - Request support from Proposals team for client governance meeting.</description>
    <label>Governance Presentation</label>
</RecordType>