knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Deal_Workstream__c/recordTypes/Implementation_Presentation.recordType-meta.xml
<RecordType>
    <fullName>Implementation_Presentation</fullName>
    <active>true</active>
    <description>PROPOSAL TEAM REQUEST - Request proposals to support Implementation presentation creation &amp; review</description>
    <label>Implementation Presentation</label>
</RecordType>