knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Deal_Workstream__c/recordTypes/Implementation_Request.recordType-meta.xml
<RecordType>
    <fullName>Implementation_Request</fullName>
    <active>true</active>
    <description>IMPLEMENTATION KICKOFF - Submit a request to Implementation team to kickoff implementation activities</description>
    <label>Implementation Request</label>
</RecordType>