knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Deal_Workstream__c/recordTypes/Presentation_Proposal_Request.recordType-meta.xml
<RecordType>
    <fullName>Presentation_Proposal_Request</fullName>
    <active>true</active>
    <description>PROPOSAL TEAM REQUEST - Submit a request to the proposals team to support Client-facing presentation and/or proposal generation.</description>
    <label>Presentation/Proposal Request</label>
</RecordType>